--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/assets/images/logo/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="/assets/css/main.css">
-    <title>Whatsapp</title>
+    <title>WhatsApp</title>
 </head>
 
 <body>
@@ -15,7 +14,7 @@
         <div class="home-top"></div>
         <div class="home-body"></div>
         <div class="home-content absolute flex">
-            <div class="profil flex-1">
+            <div class="profil flex-1" id="profil">
                 <div class="profil-top">
                     <div class="profil-description flex aic">
                         <div class="profil-image flex aic flex-1">
@@ -51,37 +50,182 @@
                             <div class="archive-number-discussion text-center">6</div>
                         </div>
                     </div>
-                    <div class="discussion">
-                        <div class="discussion-item flex aic gap-10">
-                            <div class="correspondent-image">
-                                <img src="/assets/images/laure-dupont.png" alt="" width="35">
-                            </div>
-                            <div class="corespondent-content flex-1">
-                                <div class="corespondent-pseudo">Laure Dupont</div>
-                                <div class="correspondent-starting-message flex-1">
-                                    Lorem ipsum...
+                    <div class="discussion" id="discussion">
+<!--                         
+                            <div class="discussion-item flex aic gap-10">
+                                <div class="correspondent-image">
+                                    <img src="/assets/images/correspondents/avatar-1.jpg" alt="" width="35">
                                 </div>
+                                <div class="corespondent-content flex-1">
+                                    <div class="corespondent-pseudo">Alice Dupond</div>
+                                    <div class="correspondent-starting-message flex-1">
+                                        Lorem ipsum...
+                                    </div>
+                                </div>
+                                <div class="discussion-current-time">16:38</div>
                             </div>
-                            <div class="discussion-current-time">16:38</div>
-                        </div>
+                            <div class="discussion-item flex aic gap-10">
+                                <div class="correspondent-image">
+                                    <img src="/assets/images/correspondents/avatar-2.jpg" width="35" alt="" width="35">
+                                </div>
+                                <div class="corespondent-content flex-1">
+                                    <div class="corespondent-pseudo">Sophie Dubois</div>
+                                    <div class="correspondent-starting-message flex-1">
+                                        Lorem ipsum...
+                                    </div>
+                                </div>
+                                <div class="discussion-current-time">16:38</div>
+                            </div>
+                            <div class="discussion-item flex aic gap-10">
+                                <div class="correspondent-image">
+                                    <img src="/assets/images/correspondents/avatar-3.jpg" alt="" width="35">
+                                </div>
+                                <div class="corespondent-content flex-1">
+                                    <div class="corespondent-pseudo">Louise Macron</div>
+                                    <div class="correspondent-starting-message flex-1">
+                                        Lorem ipsum...
+                                 </div>
+                                </div>
+                                <div class="discussion-current-time">16:38</div>
+                            </div> 
+                        -->
                     </div>
                 </div>
             </div>
-            <div class="main flex-3 flex jcc aic">
-                <div class="main-content">
-                    <div class="main-img text-center">
-                        <img src="/assets/images/logo/whatsApp-home-icon.JPG" alt="">
+            <div class="main flex-3 relative" id="main-box">
+                <div class="main-home flex jcc aic" id="main-home">
+                    <div class="main-home-content">
+                        <div class="main-img text-center">
+                            <img src="/assets/images/logo/whatsApp-home-icon.JPG" alt="">
+                        </div>
+                        <div class="main-description text-center">
+                            <h1 class="description-title">WhatsApp Web</h1>
+                            <p class="description-content">
+                                Envoyez et recevez des messages sans avoir à garder votre
+                                téléphone connecté. Utilisez WhatsApp sur un maximum de 4 appareils et 1 téléphone,
+                                simultanément.
+                            </p>
+                        </div>
                     </div>
-                    <div class="main-description text-center">
-                        <h1 class="description-title">WhatsApp Web</h1>
-                        <p class="description-content">Envoyez et recevez des messages sans avoir à garder votre
-                            téléphone connecté. Utilisez WhatsApp sur un maximum de 4 appareils et 1 téléphone,
-                            simultanément.</p>
-                    </div>
+                </div>
+                <div class="main-content" id="main-content">
+                        <div class="main-header flex aic jcsb relative" id="main-header">
+                            <div class="profil-details flex aic gap-20">
+                                <i class="fas fa-bars none" id="burger-icon"></i>
+                                <div class="correspondent-infos flex aic gap-5">
+                                    <div class="correspondent-image">
+                                        <img src="/assets/images/correspondents/espero.jpg" width="35" alt="">
+                                    </div>
+                                    <div class="profil-description">Espero Akpoli</div>
+                                </div>
+                            </div>
+                            <div class="profil-icons flex gap-10">
+                                <div class="profil-icon">
+                                    <i class="fas fa-search"></i>
+                                </div>
+                                <div class="profil-icon">
+                                    <i class="fas fa-ellipsis-v"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="main-body">
+                            <div class="users-text flex column">
+                                <div class="sender-text flex aic relative p-5">
+                                    <i class="fas fa-share absolute"></i>
+                                    <a href="/assets/images/capture/capture-1.JPG">
+                                        <div class="text-file-transfert">
+                                            <img src="/assets/images/capture/capture-1.JPG" alt="">
+                                        </div>
+                                    </a>
+                                    <div class="discussion-details flex gap-5 absolute">
+                                        <div class="discussion-current-time">16:38</div>
+                                        <i class="bi bi-check-all view"></i>
+                                    </div>
+                                </div>
+                                <div class="sender-text flex aic relative p-5">
+                                    <i class="fas fa-share absolute"></i>
+                                    <a href="/assets/images/capture/capture-2.JPG">
+                                        <div class="text-file-transfert">
+                                            <img src="/assets/images/capture/capture-2.JPG" alt="">
+                                        </div>
+                                    </a>
+                                    <div class="discussion-details flex gap-5 absolute">
+                                        <div class="discussion-current-time">16:38</div>
+                                        <i class="bi bi-check-all view"></i>
+                                    </div>
+                                </div>
+                                <!-- <div class="file-share-container flex aic">
+                                </div> -->
+                                <div class="receiver-text relative p-5">
+                                    <div class="text flex">
+                                        Bonjour monsieur Espero. Je n'arrive pas à trouver 
+                                        le code pour mettre mon image en pleine écran 
+                                        (responsive).J'ai déja vu ce code mais je n'arrive 
+                                        pas à le trouver. Je vous remercie. Je suis sur le 
+                                        TP5 le méga menu en css. Bien à vous.
+                                    </div>  
+                                    <div class="discussion-details flex gap-5 absolute">
+                                        <div class="discussion-current-time">16:38</div>
+                                    </div>
+                                </div>
+                                <!-- <div class="receiver-voice relative flex b">
+                                    <div class="voice-container">
+                                       <div class="profil-image flex aic flex-1">
+                                            <img src="/assets/images/logo/franck.jpg" width="35" alt="">
+                                       </div>    
+                                    </div> 
+                                    <div class="audio-box">
+                                        <audio controls>
+                                            <source src="/assets/audio/audio-1.mp3">
+                                        </audio>  
+                                    </div>
+                                    <div class="discussion-details flex gap-5 absolute">
+                                        <div class="discussion-current-time">16:38</div>
+                                        <i class="bi bi-check-all view"></i>
+                                    </div>
+                                </div> -->
+                                <div class="sender-text relative p-5">
+                                    <div class="text">
+                                        Bonjour monsieur franck
+                                    </div>
+                                    <div class="discussion-details flex gap-5 absolute">
+                                        <div class="discussion-current-time">16:38</div>
+                                        <i class="bi bi-check-all not-view"></i>
+                                    </div>
+                                </div>
+                                <div class="sender-text relative p-5">
+                                    <div class="text">
+                                        ok. Vous pouvez m'envoyer vos identifiants Teamviewer ?
+                                    </div>
+                                    <div class="discussion-details flex gap-5 absolute">
+                                        <div class="discussion-current-time">16:40</div>
+                                        <i class="bi bi-check-all not-view"></i>
+                                    </div>
+                                </div>
+                                <div class="receiver-text relative p-5">
+                                    <div class="text flex">
+                                        D'accord monsieur je le fais toute de suite.
+                                    </div>  
+                                    <div class="discussion-details flex gap-5 absolute">
+                                        <div class="discussion-current-time">16:38</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="text-box absolute flex aic gap-10">
+                                <i class="bi bi-emoji-smile"></i>
+                                <i class="fas fa-paperclip"></i>
+                                <div class="search-box flex-1">
+                                    <input type="text" name="sender-message" id="sender-message" placeholder="Taper un message">
+                                </div>
+                                <i class="bi bi-mic-fill"></i>
+                            </div>
+                        </div>
                 </div>
             </div>
         </div>
     </div>
+    <script src="/assets/js/functions/functions.js"></script>
+    <script src="/assets/js/functions/listeners.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
-
 </html>
