whatsApp : partie messages

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                             <div class="users-text flex column">
                                 <div class="sender-text flex aic relative p-5">
                                     <i class="fas fa-share absolute"></i>
-                                    <a href="/assets/images/capture/capture-1.JPG">
+                                    <a href="/assets/images/capture/capture-1.JPG" title="capture du code">
                                         <div class="text-file-transfert">
                                             <img src="/assets/images/capture/capture-1.JPG" alt="">
                                         </div>
