--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <div class="home-body"></div>
         <div class="home-content absolute flex">
             <div class="profil flex-1" id="profil">
-                <div class="profil-top">
+                <div class="profil-top relative" id="profil-top">
                     <div class="profil-description flex aic">
                         <div class="profil-image flex aic flex-1">
-                            <img src="/assets/images/logo/franck.jpg" width="35" alt="">
+                            <img src="/assets/images/logo/franck.jpg" width="35" alt="" id="profil-image">
                         </div>
                         <div class="profil-icons flex aic gap-10">
                             <div class="profil-icon relative">
@@ -28,7 +28,7 @@
                             <div class="profil-icon">
                                 <i class="fas fa-comment-alt"></i>
                             </div>
-                            <div class="profil-icon">
+                            <div class="profil-icon" id="ellipsis-icon">
                                 <i class="fas fa-ellipsis-v"></i>
                             </div>
                         </div>
@@ -40,9 +40,23 @@
                                 placeholder="Rechercher ou démarrer une nouvelle discussion">
                         </div>
                         <i class="fas fa-filter"></i>
+                    </div> 
+                    
+                    <!-- <div class="profil-description-top flex aie gap-20">
+                        <i class="fas fa-arrow-left"></i>
+                        <div class="description">Paramètres</div>
+                    </div> -->
+                    <div class="more-options absolute" id="more-options">
+                        <ul class="unlisted" >
+                            <li class="unlisted-item" id="new-group">Nouveau groupe</li>
+                            <li class="unlisted-item" id="new-community">Nouvelle communauté</li>
+                            <li class="unlisted-item" id="importants-messages">Messageses importants</li>
+                            <li class="unlisted-item" id="setting">Paramètres</li>
+                            <li class="unlisted-item" id="sign-out">Déconnexion</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="profil-body">
+                <div class="profil-body" id="profil-body">
                     <div class="archive flex aic gap-20">
                         <i class="fas fa-archive"></i>
                         <div class="main-archive flex aic flex-1">
@@ -50,45 +64,7 @@
                             <div class="archive-number-discussion text-center">6</div>
                         </div>
                     </div>
-                    <div class="discussion" id="discussion">
-<!--                         
-                            <div class="discussion-item flex aic gap-10">
-                                <div class="correspondent-image">
-                                    <img src="/assets/images/correspondents/avatar-1.jpg" alt="" width="35">
-                                </div>
-                                <div class="corespondent-content flex-1">
-                                    <div class="corespondent-pseudo">Alice Dupond</div>
-                                    <div class="correspondent-starting-message flex-1">
-                                        Lorem ipsum...
-                                    </div>
-                                </div>
-                                <div class="discussion-current-time">16:38</div>
-                            </div>
-                            <div class="discussion-item flex aic gap-10">
-                                <div class="correspondent-image">
-                                    <img src="/assets/images/correspondents/avatar-2.jpg" width="35" alt="" width="35">
-                                </div>
-                                <div class="corespondent-content flex-1">
-                                    <div class="corespondent-pseudo">Sophie Dubois</div>
-                                    <div class="correspondent-starting-message flex-1">
-                                        Lorem ipsum...
-                                    </div>
-                                </div>
-                                <div class="discussion-current-time">16:38</div>
-                            </div>
-                            <div class="discussion-item flex aic gap-10">
-                                <div class="correspondent-image">
-                                    <img src="/assets/images/correspondents/avatar-3.jpg" alt="" width="35">
-                                </div>
-                                <div class="corespondent-content flex-1">
-                                    <div class="corespondent-pseudo">Louise Macron</div>
-                                    <div class="correspondent-starting-message flex-1">
-                                        Lorem ipsum...
-                                 </div>
-                                </div>
-                                <div class="discussion-current-time">16:38</div>
-                            </div> 
-                        -->
+                    <div class="discussion" id="discussion">                       
                     </div>
                 </div>
             </div>
@@ -132,7 +108,7 @@
                             <div class="users-text flex column">
                                 <div class="sender-text flex aic relative p-5">
                                     <i class="fas fa-share absolute"></i>
-                                    <a href="/assets/images/capture/capture-1.JPG" title="capture du code">
+                                    <a href="/assets/images/capture/capture-1.JPG" target="_blank" title="capture du code">
                                         <div class="text-file-transfert">
                                             <img src="/assets/images/capture/capture-1.JPG" alt="">
                                         </div>
@@ -144,7 +120,7 @@
                                 </div>
                                 <div class="sender-text flex aic relative p-5">
                                     <i class="fas fa-share absolute"></i>
-                                    <a href="/assets/images/capture/capture-2.JPG">
+                                    <a href="/assets/images/capture/capture-2.JPG" target="_blank">
                                         <div class="text-file-transfert">
                                             <img src="/assets/images/capture/capture-2.JPG" alt="">
                                         </div>
@@ -153,9 +129,9 @@
                                         <div class="discussion-current-time">16:38</div>
                                         <i class="bi bi-check-all view"></i>
                                     </div>
+                                </div> 
+                                <div class="file-share-container flex aic">
                                 </div>
-                                <!-- <div class="file-share-container flex aic">
-                                </div> -->
                                 <div class="receiver-text relative p-5">
                                     <div class="text flex">
                                         Bonjour monsieur Espero. Je n'arrive pas à trouver 
@@ -171,7 +147,7 @@
                                 <!-- <div class="receiver-voice relative flex b">
                                     <div class="voice-container">
                                        <div class="profil-image flex aic flex-1">
-                                            <img src="/assets/images/logo/franck.jpg" width="35" alt="">
+                                        <img src="/assets/images/logo/franck.jpg" width="35" alt="">
                                        </div>    
                                     </div> 
                                     <div class="audio-box">
@@ -224,8 +200,8 @@
             </div>
         </div>
     </div>
-    <script src="/assets/js/functions/functions.js"></script>
-    <script src="/assets/js/functions/listeners.js"></script>
+    <script src="/assets/js/functions/functions.js" type="module"></script>
+    <script src="/assets/js/functions/listeners.js" type="module"></script>
     <script src="/assets/js/main.js"></script>
 </body>
 </html>
