--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="home-top"></div>
         <div class="home-body"></div>
         <div class="home-content absolute flex">
-            <aside class="flex-1" id="aside">
-                <div class="aside-home" id="aside-home">
+            <aside class="flex-1 relative" id="aside">
+                <div class="aside-home absolute" id="aside-home">
                     <div class="aside-home-top relative" id="aside-home-top">
                         <div class="aside-home-description flex aic">
                             <div class="profil-image flex aic flex-1">
@@ -50,7 +50,7 @@
                                 <li class="unlisted-item" id="new-community">Nouvelle communauté</li>
                                 <li class="unlisted-item" id="importants-messages">Messageses importants</li>
                                 <li class="unlisted-item" id="setting">Paramètres</li>
-                                <li class="unlisted-item" id="sign-out">Déconnexion</li>
+                                <li class="unlisted-item" id="sign-out-btn">Déconnexion</li>
                             </ul>
                         </div>
                     </div>
@@ -66,7 +66,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="aside-setting" id="aside-setting">
+                <div class="aside-setting absolute" id="aside-setting">
                     <div class="aside-setting-top" id="aside-setting-top">
                         <div class="setting-description-top flex aie gap-20">
                                 <i class="fas fa-arrow-left" id= aside-setting-icon></i>
@@ -77,7 +77,7 @@
 
                     </div>
                 </div>
-                <div class="aside-profil" id="aside-profil">
+                <div class="aside-profil absolute" id="aside-profil">
                     <div class="aside-profil-top">
                         <div class="setting-description-top flex aie gap-20">
                             <i class="fas fa-arrow-left" id="aside-profil-icon"></i>
@@ -155,7 +155,7 @@
                         </div> -->
                     </div>
                 </div>
-                <div class="aside-stickers" id="aside-stickers">
+                <div class="aside-stickers absolute" id="aside-stickers">
                     <div class="aside-stickers-top">
                         <div class="stickers-description-top flex aie gap-20">
                                 <i class="fas fa-arrow-left" id="aside-stickers-icon"></i>
@@ -214,7 +214,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="aside-discussion" id="aside-discussion">
+                <div class="aside-discussion absolute" id="aside-discussion">
                     <div class="aside-discussion-top" id="aside-discussion-top">
                         <div class="discussion-description-top flex aie gap-20">
                                 <i class="fas fa-arrow-left" id= aside-discussion-icon></i>
@@ -363,6 +363,21 @@
                             </div>
                             <i class="bi bi-mic-fill"></i>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="overlay absolute" id="overlay"></div>
+            <div class="sign-out absolute" id="sign-out">
+                <div class="sign-out-top">
+                    <h2 class="title">Se déconecter ?</h2>
+                </div>
+                <div class="sign-out-body">
+                    <div class="description">
+                        Voulez-vous vraiment vous déconnecter ?
+                    </div>
+                    <div class="buttons flex aie jcfe gap-10">
+                        <button class="btn-cancel" id="cancel-sign-out">ANNULER</button>
+                        <button class="btn-sign-out">DECONNEXION</button>
                     </div>
                 </div>
             </div>
